# Forge

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Forge.toml  LICENSE  MIGRATION.md  PLUGINS.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  forgecli.toml  index.html  main.py  package-lock.json  package.json  pyproject.toml  release_validation_report.md
.agents/: mcp_config.json
.github/workflows/: ci.yml  release.yml  test.yml
docs/: OVERVIEW.md  commands.md
examples/: forgecli.toml
examples/forgecli-demo-plugin/: README.md  forgecli-plugin.toml
examples/sample-plugin/: README.md  forgecli-plugin.toml  sample_plugin.py
forgecli/: __init__.py  foo.py  loop.py
forgecli/budget/: __init__.py  middleware.py  planner.py  window.py
forgecli/builder/: __init__.py  builder.py  editor.py  formatter.py
forgecli/cli/: __init__.py  bootstrap.py  commands_ask.py  commands_auth.py  commands_build.py  commands_commit.py  commands_diagnostics.py  commands_docs.py  commands_doctor.py  commands_explain.py  commands_forge.py  commands_git.py  commands_graph.py  commands_info.py  commands_init.py  commands_inspect.py  commands_model.py  commands_optimizer.py  commands_plugin.py  commands_providers.py  commands_release.py  commands_review.py  commands_status.py  commands_update.py  commands_wrappers.py  daemon.py  daemon_utils.py  main.py  ui.py
forgecli/commit/: __init__.py  analyzer.py  changelog.py  git_utils.py  message.py  release_notes.py
forgecli/config/: __init__.py  loader.py  settings.py  writer.py
forgecli/conversation/: __init__.py  manager.py  session.py
forgecli/core/: __init__.py  container.py  context.py  credentials.py  errors.py  events.py  logging.py  models.py  plugins.py  service.py  verification.py
forgecli/docs/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_ask_build_regressions.py  test_auth.py  test_auth_provider.py  test_budget_context.py  test_build_pipeline.py  test_caching_observability.py  test_caveman_cli.py  test_caveman_ruleset.py  test_cli.py  test_commit.py  test_config.py  test_container.py  test_conversation_optimization.py  test_diagnostics.py  test_e2e.py  test_engine.py  test_forgegraph_client.py  test_graph.py  test_graphify_client.py  test_init.py  test_loop.py  test_mcp_config.py  test_memory.py  test_middleware.py  test_model_commands.py  test_negotiator.py  test_optimizer.py  test_orchestrator.py  test_orchestrator_cli.py  test_output_optimization.py  test_planner.py  test_planner_render.py  test_platform.py  test_policy.py  test_ponytail_cli.py  test_ponytail_ruleset.py  test_prompts.py  test_provider.py  (+18 more)
(+235 files in other folders)
