[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "forgectx"
version = "1.0.0"
description = "Forge — AI optimization runtime for Claude Code, Codex, Cursor, Antigravity"
readme = "README.md"
license = { text = "MIT" }
license-files = []
requires-python = ">=3.12"
authors = [
    { name = "Forge Authors" }
]
keywords = ["ai", "cli", "developer-tools", "codex", "claude", "cursor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "gitpython>=3.1.42",
    "httpx>=0.27.0",
    "keyring>=25.2.0",
    "cryptography>=42.0.5",
    "aiofiles>=23.2.1",
    "platformdirs>=4.2.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML",
    "respx>=0.21.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
forge = "forgecli.cli.main:app"

[project.urls]
Homepage = "https://github.com/mdshzb04/Forge"
Repository = "https://github.com/mdshzb04/Forge"
Documentation = "https://github.com/mdshzb04/Forge#readme"
Issues = "https://github.com/mdshzb04/Forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["forgecli"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "SIM", "RUF"]
ignore = [
    "E501",
    "N802",
    "UP042",
    "UP046",
    "B008",
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers -m 'not slow'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow integration tests (deselect with '-m not slow')",
]

[tool.coverage.run]
source = ["forgecli"]
omit = ["*/tests/*", "*/__init__.py"]
